<resources>
    <string name="app_name">Media Escolar MVC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Media Escolar MVC</string>
    <string name="nav_header_subtitle">By: Lucas Pinheiro</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_sair">Sair</string>

    <!--nomes dos bimestre do menu lateral drawer-->
    <string name="primeiroBimestre">Notas--1º Bimestre"</string>
    <string name="segundoBimestre">Notas--2º Bimestre"</string>
    <string name="terceiroBimestre">Notas--3º Bimestre"</string>
    <string name="quartoBimestre">Notas--4º Bimestre"</string>
    <string name="resultadoFinal">Notas--RESULTADO FINAL"</string>


    <!--content Main (Menu)-->
    <string name="botaoPrimeiroBim">Primeiro Bimestre</string>
    <string name="botaoSegundoBim">Segundo Bimestre</string>
    <string name="botaoTerceiroBim">Terceiro Bimestre</string>
    <string name="botaoQuartoBim">Quarto Bimestre</string>
    <string name="botaoResultaFinal">Resultado Final</string>

    <!--botoes Content Bimestres-->
    <string name="btnCalcular">Calcular</string>
    <string name="btnLimpar">limpar</string>
    <string name="btnSalvar">Salvar</string>

    <!--content Primeiro Bimestre-->
    <string name="tituloPrimeiroBim">Primeiro Bimestre</string>


    <!--content Segundo Bimestre-->
    <string name="tituloSegundoBim">Segundo Bimestre</string>

    <!--content Terceiro Bimestre-->
    <string name="tituloTerceiroBim">Terceiro Bimestre</string>

    <!--content Quarta Bimestre-->
    <string name="tituloQuartoBim">Quarto Bimestre</string>
    <string name="txtLogo">Logo Bimestre</string>
    <string name="fragment_Bimestre">1º Bimestre</string>

</resources>
