<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_primeiro_BimestreID"
            android:icon="@drawable/ic_lancamento_notas"
            android:title="@string/primeiroBimestre" />
        <item
            android:id="@+id/nav_segundo_BimestreID"
            android:icon="@drawable/ic_lancamento_notas"
            android:title="@string/segundoBimestre" />
        <item
            android:id="@+id/nav_terceiro_BimestreID"
            android:icon="@drawable/ic_lancamento_notas"
            android:title="@string/terceiroBimestre" />
        <item
            android:id="@+id/nav_quarto_BimestreID"
            android:icon="@drawable/ic_lancamento_notas"
            android:title="@string/quartoBimestre" />
        <item
            android:id="@+id/nav_resultadoFinal_ID"
            android:icon="@drawable/ic_result_final"
            android:title="@string/resultadoFinal" />

    </group>


    <item android:title="Compartilhar">
        <menu>
            <item
                android:id="@+id/compartilharAppID"
                android:icon="@drawable/ic_menu_share"
                android:title="Compartilhar APP" />

        </menu>
    </item>

</menu>
