<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".view.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:showIn="@layout/fragment_quarto_bim">
    <!-- -->

    <TextView
        android:id="@+id/txtvw_tituloQuartoBimID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/tituloQuartoBim"
        android:textColor="@color/Texto"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/tituloQuartoBim" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:text="Materia:"
        android:textColor="@color/Texto"
        app:layout_constraintBottom_toTopOf="@+id/edtxt_materiaQuartoBimID"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Nota Prova:"
        android:textColor="@color/Texto"
        app:layout_constraintBottom_toTopOf="@+id/edtxt_materiaQuartoBimID"
        app:layout_constraintStart_toStartOf="@+id/edtxt_provaQuartoBimID" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:text="Nota Trab:"
        android:textColor="@color/Texto"
        app:layout_constraintBottom_toTopOf="@+id/edtxt_trabalQuartoBimID"
        app:layout_constraintStart_toStartOf="@+id/edtxt_trabalQuartoBimID" />

    <EditText
        android:id="@+id/edtxt_materiaQuartoBimID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/Texto"
        app:layout_constraintEnd_toStartOf="@+id/edtxt_provaQuartoBimID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtxt_provaQuartoBimID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="@color/Texto"
        app:layout_constraintEnd_toStartOf="@+id/edtxt_trabalQuartoBimID"
        app:layout_constraintStart_toEndOf="@+id/edtxt_materiaQuartoBimID"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/edtxt_trabalQuartoBimID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="@color/Texto"
        app:layout_constraintBottom_toBottomOf="@+id/edtxt_provaQuartoBimID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edtxt_provaQuartoBimID"
        app:layout_constraintTop_toTopOf="@+id/edtxt_provaQuartoBimID" />

    <TextView
        android:id="@+id/txtvw_titulo_media_primeiroID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="Media:"
        android:textColor="@color/Texto"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="@+id/txtvw_mediaQuartoFinalID"
        app:layout_constraintStart_toEndOf="@+id/txtvw_mediaQuartoFinalID"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_materiaQuartoBimID" />

    <TextView
        android:id="@+id/txtvw_titulo_resultadoFinalID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="42dp"
        android:text="Resultado Final"
        android:textColor="@color/Texto"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="@+id/edtxt_provaQuartoBimID"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_trabalQuartoBimID" />

    <TextView
        android:id="@+id/txtvw_mediaQuartoFinalID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:text="0,0"
        android:textColor="@color/Texto"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvw_titulo_media_primeiroID" />

    <TextView
        android:id="@+id/txtvw_resultadoQuartoFinalID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:text="Indefinido"
        android:textColor="@color/Texto"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="@+id/txtvw_titulo_resultadoFinalID"
        app:layout_constraintTop_toBottomOf="@+id/txtvw_titulo_resultadoFinalID" />

    <Button
        android:id="@+id/btn_QuartoBimCalcularID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_gravar_bimestre_customizado"
        android:enabled="true"
        android:text="@string/btnCalcular"
        android:textColor="@color/Texto"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_QuartorBimSalvarID"
        app:layout_constraintEnd_toStartOf="@+id/btn_QuartorBimSalvarID"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_QuartoBimLimparID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_limpar_bimestre_customizado"
        android:enabled="true"
        android:text="@string/btnLimpar"
        android:textColor="@color/Texto"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_QuartorBimSalvarID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_QuartorBimSalvarID" />

    <Button
        android:id="@+id/btn_QuartorBimSalvarID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_gravar_bimestre_customizado"
        android:enabled="true"
        android:text="@string/btnSalvar"
        android:textColor="@color/Texto"
        app:layout_constraintEnd_toStartOf="@+id/btn_QuartoBimLimparID"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_QuartoBimCalcularID"
        app:layout_constraintTop_toBottomOf="@+id/txtvw_resultadoQuartoFinalID" />
</android.support.constraint.ConstraintLayout>
